--- a/rt-test.html
+++ b/rt-test.html
@@ -17,11 +17,10 @@
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-        <![endif]-->
-
         
+        <div class="container">
+
+
         <h1>Create ticket test</h1>
 
         <hr/>
@@ -45,17 +44,20 @@
             </div>
           </div>
         </div>
-    
+
+    <hr/>
+
+    <p id="ticket-number"></p>
+
+
+<p>Run <a href="http://pivotal.github.com/jasmine/">Jasmine</a> suite of <a href="js/tests/">tests</a></p>
 
     </div>
-
-<p><a href="js/tests/index.html">run tests</a></p>
-
-        <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script> -->
+    <!-- end .container -->
 
         <script src="js/vendor/jquery-1.8.3.min.js"></script>
         <script src="js/rt-test.js"></script>
+
 
 
     </body>
