--- a/rt-test.html
+++ b/rt-test.html
@@ -9,9 +9,6 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/font-awesome.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
@@ -35,7 +32,7 @@
           <div class="control-group">
             <label class="control-label" for="content">Content</label>
             <div class="controls">
-              <textarea id="content" rows="3"></textarea>
+              <textarea id="message" rows="3"></textarea>
             </div>
           </div>
           <div class="control-group">
@@ -56,9 +53,8 @@
     <!-- end .container -->
 
         <script src="js/vendor/jquery-1.8.3.min.js"></script>
+        <script src="js/helpers.js"></script>
         <script src="js/rt-test.js"></script>
-
-
 
     </body>
 </html>
