--- a/rt-test.html
+++ b/rt-test.html
@@ -11,33 +11,60 @@
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/font-awesome.css">
+        <link rel="stylesheet" href="css/webforms.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
+
+
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container-fluid">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="#">UW-IT Webforms</a>
+          <div class="nav-collapse collapse">
+            <p class="navbar-text pull-right">
+              Logged in as <span id="uw-netid">Username</span>
+            </p>
+            <ul class="nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
         
-        <div class="container">
+        <div class="container-fluid">
 
 
-        <h1>Create ticket test</h1>
+        <h1>SSG::Test ticket</h1>
 
         <hr/>
 
         <div class="form-horizontal">
+ 
           <div class="control-group">
-            <label class="control-label" for="subject">Subject</label>
+             <label class="control-label" for="subject">Subject</label>
             <div class="controls">
               <input type="text" id="subject" placeholder="">
             </div>
           </div>
+
           <div class="control-group">
-            <label class="control-label" for="content">Content</label>
+            <label class="control-label" for="message">Content</label>
             <div class="controls">
               <textarea id="message" rows="3"></textarea>
             </div>
           </div>
           <div class="control-group">
             <div class="controls">
-              <button class="btn">Submit</button>
+              <button class="btn-primary btn">Submit</button>
             </div>
           </div>
         </div>
