--- a/tsm.html
+++ b/tsm.html
@@ -44,6 +44,7 @@
 
 <script src="./js/vendor/jquery-1.8.3.min.js"></script>
 <script src="./js/vendor/bootstrap.min.js"></script>
+<script src="./js/helpers.js"></script>
 <script src="./js/webforms.js"></script>
 
 </body>
