added header('Content-type: application/json')
otherwise the js wasn't considering it a js object and was throwing
back "undefined"

--- a/form.html
+++ b/form.html
@@ -67,6 +67,8 @@
             </div>
           </div> -->
 
+          <p id="whoami"></p>
+
           <div class="control-group">
             <div class="controls">
               <button class="btn-primary btn">Submit</button>
