tsm form in a decent state for now
needs customization though

--- a/form.html
+++ b/form.html
@@ -48,10 +48,43 @@
 
         <h1></h1>
 
+
+
         <hr/>
 
-        <div class="form-horizontal">
 
+          <div id="whoami" class="well">
+
+            <address>
+              <strong><span class="name lead"></span></strong><br/>
+              <span class="title"></span><br/>
+              <span class="mailstop">Mailstop </span><br/>
+              <span class="phone"></span><br/>
+              <span class="email"></span>
+            </address>
+          </div>
+
+        <hr/>
+
+
+
+
+        <div class="form-horizontal">
+<div class="control-group">
+               <label class="control-label" for="subject">Server</label>
+
+<!-- <div class="input-append">
+
+              <input class="span2" id="appendedDropdownButton" type="text">
+              <div class="btn-group">
+                <button class="btn dropdown-toggle" data-toggle="dropdown">Server <span class="caret"></span></button>
+                <ul class="dropdown-menu">
+                  <li><a href="#">.s.uw.edu</a></li>
+                  <li><a href="#">.cac.washington.edu</a></li>
+                </ul>
+              </div>
+            </div>
+</div> -->
  
           <!-- <div class="control-group">
              <label class="control-label" for="subject">Subject</label>
@@ -67,7 +100,7 @@
             </div>
           </div> -->
 
-          <p id="whoami"></p>
+
 
           <div class="control-group">
             <div class="controls">
@@ -88,6 +121,8 @@
     <!-- end .container -->
 
         <script src="js/vendor/jquery-1.8.3.min.js"></script>
+                <script src="js/vendor/bootstrap.min.js"></script>
+
         <script src="js/helpers.js"></script>
         <script src="js/webforms.js"></script>
 
