--- a/js/tests/spec.html
+++ b/js/tests/spec.html
@@ -7,9 +7,8 @@
   <script src="vendor/jasmine-1.3.1/jasmine-html.js"></script>
 
   <!-- include source files here... -->
-    <script src="../../js/vendor/jquery-1.8.3.min.js"></script>
-
-  <script src="../../js/rt-test.js"></script>
+  <script src="../../js/vendor/jquery-1.8.3.min.js"></script>
+  <script src="../../js/webforms.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec.js"></script>
