new cool index page!

--- a/index.html
+++ b/index.html
@@ -11,52 +11,20 @@
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/font-awesome.css">
+        <link rel="stylesheet" href="css/webforms.css">
+
 
     <style type="text/css">
-      body {
-        padding-top: 20px;
-        padding-bottom: 40px;
-      }
-
-      /* Custom container */
-      .container-narrow {
-        margin: 0 auto;
-        max-width: 700px;
-      }
-      .container-narrow > hr {
-        margin: 30px 0;
-      }
-
-      /* Main marketing message and sign up button */
-      .jumbotron {
-        margin: 60px 0;
-        text-align: center;
-      }
-      .jumbotron h1 {
-        font-size: 72px;
-        line-height: 1;
-      }
-      .jumbotron .btn {
-        font-size: 21px;
-        padding: 14px 24px;
-      }
-
-      /* Supporting marketing content */
-      .marketing {
-        margin: 60px 0;
-      }
-      .marketing p + h4 {
-        margin-top: 28px;
-      }
+ 
     </style>
 
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 
   </head>
 
-  <body>
+  <body id="index-page">
 
-    <div class="container-narrow">
+    <div class="container-narrow" >
 
       <header class="masthead">
         <ul class="nav nav-pills pull-right">
@@ -64,7 +32,7 @@
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
-        <h3 class="muted">UW-IT Webforms</h3>
+        <h3 class="muted">UW-IT</h3>
       </header>
 
       <hr>
@@ -79,30 +47,39 @@
 
       <div class="row-fluid marketing">
         <div class="span6">
-          <h4>Design</h4>
-          <p>Principled design that's consistent across all forms and backed by <a href="http://rosenfeldmedia.com/books/webforms/">respected research</a>.</p>
+          <h4><i class="icon-book"> </i> Design</h4>
+          <p>Principled design that's consistent across all forms and backed by <a href="http://rosenfeldmedia.com/books/webforms/">respected research</a> to reduce time-to-completion and increase input accuracy.</p>
 
-          <h4>Branding</h4>
-          <p>UW-IT branded with UW-approved purples to increase user confidence. </p>
+          <h4><i class="icon-bullhorn"> </i> Branding</h4>
+          <p>UW-IT branded with UW-approved purples to increase user confidence.</p>
 
-          <h4>Mobile-friendly</h4>
-          <p>Using responsive design, forms works across a variety of devices.</p>
+          <h4><i class="icon-thumbs-up"></i> Mobile-Friendly</h4>
+          <p>Using <a href="http://www.abookapart.com/products/responsive-web-design">responsive design</a>, forms work across a variety of devices, browsers and operating systems.</p>
         </div>
 
         <div class="span6">
-          <h4>Modern Technologies</h4>
+          <h4><i class=" icon-check"></i> Modern Technologies</h4>
           <p>Uses cutting edge technologies from a utopian future: 
-    HTML5,
-    CSS3,
-    JavaScript,
-    jQuery,
-    Modernizr,
-    Bootstrap,
-    Grunt,
-    Sass.</p>
+<ul>
+<li><a href="http://developers.whatwg.org/">HTML5</a></li>
+<li><a href="http://www.w3.org/Style/CSS/">CSS3</a></li>
+<li><a href="https://developer.mozilla.org/en-US/docs/JavaScript">JavaScript</a></li>
+<li><a href="http://jquery.com/">jQuery</a></li>
+<li><a href="http://twitter.github.com/bootstrap/">Bootstrap</a></li>
+<li><a href="http://fortawesome.github.com/Font-Awesome/">Font Awesome</a></li>
+<li><a href="http://modernizr.com/">Modernizr</a></li>
+<li><a href="http://gruntjs.com/">Grunt</a></li>
+<li><a href="http://sass-lang.com/">Sass</a></li>
+</ul>
 
-          <h4>Open Source</h4>
-          <p>A <a href="https://github.com/jodytate/uwit-webforms">GitHub project</a> that leverages open-source community projects.</p>
+          </p>
+
+          <h4><i class="icon-github"> </i> Open Source</h4>
+          <p>A <a href="https://github.com/jodytate/uwit-webforms">GitHub project</a> that leverages a wide range of open-source community projects.</p>
+
+
+          <h4><i class="icon-cogs"> </i> Integration</h4>
+          <p>Works with RT or email.</p>
 
         </div>
       </div>
