vertical form now, also changing how user retrieval starts form display

--- a/form.html
+++ b/form.html
@@ -31,7 +31,7 @@
           <a class="brand" href="index.html">UW-IT Webforms</a>
           <div class="nav-collapse collapse">
             <p class="navbar-text pull-right">
-              Logged in as <span id="uw-netid">Username</span>
+              UW NetID: <span id="uw-netid">Can't Detect</span>
             </p>
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
