added jquery migrate
made notes to the readme about it

--- a/form.html
+++ b/form.html
@@ -59,6 +59,10 @@
             <p id="form-description">Automated description here for more information if necessary.</p>
         </div>
 
+        <div class="alert alert-info">
+              <strong>Note</strong> This is a tenative list of fields. The order and grouping may be changed as well.
+            </div>
+
                 <div class="alert alert-error" id="who-are-you-error">
                     <h4>There's a Problem</h4>
                     <p>We can't determine your UW NetID. You'll need one before completing this form.</p> 
@@ -82,6 +86,9 @@
             
             <div id="whoami">
 
+        <div class="alert alert-info">
+              <strong>Note</strong> This area may or may not be used.
+            </div>
             <address>
               <strong><span class="name"></span></strong><br/>
               <span class="title"></span><br/>
@@ -129,6 +136,8 @@
     <!-- end .container-fluid -->
 
         <script src="js/vendor/jquery-1.8.3.min.js"></script>
+        <script src="js/vendor/jquery-migrate-1.0.0b1.js"></script>
+
         <script src="js/vendor/jquery.pulse.min.js"></script>
 
         <script src="js/vendor/bootstrap.min.js"></script>
