--- a/form.html
+++ b/form.html
@@ -10,9 +10,9 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/font-awesome.css">
+        <link rel="stylesheet" href="css/font-awesome.min.css">
         <!--[if IE 7]>
-            <link rel="stylesheet" href="css/font-awesome-ie7.css">
+            <link rel="stylesheet" href="css/font-awesome-ie7.min.css">
         <![endif]-->
         <link rel="stylesheet" href="css/webforms.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
