improvements to index, better icons, better wording, image

--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/font-awesome.css">
+        <!--[if IE 7]>
+            <link rel="stylesheet" href="css/font-awesome-ie7.min.css">
+        <![endif]-->
         <link rel="stylesheet" href="css/webforms.css">
-
-
-    <style type="text/css">
- 
-    </style>
-
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+    </head>
 
   </head>
 
@@ -26,7 +24,7 @@
 
     <div class="container-narrow" >
 
-      <header class="masthead">
+      <!-- <header class="masthead">
         <ul class="nav nav-pills pull-right">
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
@@ -35,31 +33,40 @@
         <h3 class="muted">UW-IT</h3>
       </header>
 
-      <hr>
+      <hr> -->
 
       <div class="jumbotron">
         <h1>UW-IT Webforms Service Spectacular</h1>
-        <p class="lead">One-stop shopping for all your webform needs.</p>
-        <a class="btn btn-large btn-success" href="#">Request one today</a>
+        <p class="lead">A service to meet your webform needs.</p>
+        <a class="btn btn-large btn-success" href="#"><i class="icon-envelope"> </i> Request one today</a>
       </div>
+
+
 
       <hr>
 
       <div class="row-fluid marketing">
         <div class="span6">
-          <h4><i class="icon-book"> </i> Design</h4>
-          <p>Principled design that's consistent across all forms and backed by <a href="http://rosenfeldmedia.com/books/webforms/">respected research</a> to reduce time-to-completion and increase input accuracy.</p>
 
           <h4><i class="icon-bullhorn"> </i> Branding</h4>
-          <p>UW-IT branded with UW-approved purples to increase user confidence.</p>
+          <p>UW-IT branded with UW-approved purples to increase user confidence and reduce time to adoption.</p>
 
-          <h4><i class="icon-thumbs-up"></i> Mobile-Friendly</h4>
+          <h4><i class="icon-thumbs-up"></i> Device Agnostic</h4>
+
           <p>Using <a href="http://www.abookapart.com/products/responsive-web-design">responsive design</a>, forms work across a variety of devices, browsers and operating systems.</p>
+
+          <h4><i class="icon-star"> </i> Design</h4>
+          <p>Principled design that's consistent across all forms and backed by <a href="http://rosenfeldmedia.com/books/webforms/">respected research</a> to reduce time-to-completion and increase input accuracy.</p>
+
+          <h4><i class="icon-cogs"> </i> Integration</h4>
+          <p>Works with UW-IT RT or email.</p>
+
         </div>
+        <!-- end .span6 -->
 
         <div class="span6">
-          <h4><i class=" icon-check"></i> Modern Technologies</h4>
-          <p>Uses cutting edge technologies from a utopian future: 
+          <h4><i class="icon-magic"></i> Modern Technologies</h4>
+          <p>Uses cutting edge technologies from a utopian future that we're realizing today: 
 <ul>
 <li><a href="http://developers.whatwg.org/">HTML5</a></li>
 <li><a href="http://www.w3.org/Style/CSS/">CSS3</a></li>
@@ -75,19 +82,20 @@
           </p>
 
           <h4><i class="icon-github"> </i> Open Source</h4>
-          <p>A <a href="https://github.com/jodytate/uwit-webforms">GitHub project</a> that leverages a wide range of open-source community projects.</p>
+          <p>A <a href="https://github.com/jodytate/uwit-webforms">GitHub project</a> that leverages a wide range of open-source projects.</p>
 
 
-          <h4><i class="icon-cogs"> </i> Integration</h4>
-          <p>Works with RT or email.</p>
+
 
         </div>
+        <!-- end .span6 -->
+
       </div>
 
       <hr>
 
       <footer class="footer">
-        <p>UW-IT</p>
+        <p><img src="images/InfoTech_UW_300.png"></p>
       </footer>
 
     </div> <!-- /container -->
