--- a/form.html
+++ b/form.html
@@ -36,7 +36,7 @@
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
               <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href="#contact">Help</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -137,9 +137,7 @@
 
         <script src="js/vendor/jquery-1.8.3.min.js"></script>
         <script src="js/vendor/jquery-migrate-1.0.0b1.js"></script>
-
-        <script src="js/vendor/jquery.pulse.min.js"></script>
-
+        <!--<script src="js/vendor/jquery.pulse.min.js"></script>-->
         <script src="js/vendor/bootstrap.min.js"></script>
         <script src="js/helpers.js"></script>
         <script src="js/webforms.js"></script>
