added name and uwnetid at top, added select as input type
select as input type needs finishing; added some help text over to the
side that's from wroblewski's book

--- a/form.html
+++ b/form.html
@@ -56,7 +56,7 @@
         <div class="span8">
         
         <div class="well">
-            <p id="form-description">Automated description here for more information if necessary.</p>
+            <p id="form-description">Or more of a description here.</p>
         </div>
 
         <div class="alert alert-info">
@@ -75,6 +75,23 @@
 
 
         <form>
+
+
+
+
+
+<div class="controls controls-row">
+    <label>Name and UW NetID</label>
+
+  <input class="span2" id="user-name" type="text" placeholder="">
+  <input class="span1" id="user-uwnetid" type="text" placeholder="">
+</div>
+  
+            <div id="form-fields">
+
+            </div>
+
+
 
             <div class="form-actions">
 
@@ -121,8 +138,8 @@
             <h2>Optional Help Text</h2>
 
                 <ul>
-                    <li> Helpful thing</li>
-                    <li> Helpful thing </li>
+                    <li> Top-aligned labels tend to reduce form completion time the most. (57) </li>
+                    <li> Help text isn't the holy grail of Web form completion. (104) </li>
                 </ul>
         </div>
 
