--- a/nebula.html
+++ b/nebula.html
@@ -46,8 +46,8 @@
     <div class="container">
 
     <header>
-        <h1></h1>
-        <p class="lead">More of a description here. <span><i class="icon-info-sign"></i></span></p>
+        <h1>Nebula Service Account Request</h1>
+        <p class="lead">Changes to Nebula and Exchange accounts <!--<span><i class="icon-info-sign"></i></span>--></p>
     </header>
 
 
@@ -128,12 +128,18 @@
     <div class="span4">
   
         <div class="well">
-            <h3>Optional Help Text</h3>
-
-                <ul>
-                    <li> Top-aligned labels tend to reduce form completion time the most. (57) </li>
-                    <li> Help text isn't the holy grail of Web form completion. (104) </li>
-                </ul>
+            <h3>Description</h3>
+            <p>This form can be used to submit requests for changes to Nebula and Exchange accounts:</p>
+<ul>
+    <li>Account creation</li>
+    <li>Changes to account access</li>
+    <li>Account deletion</li>
+</ul>
+<p>When the form is submitted it will create a support ticket and 
+send you an email confirmation of your request. Please make note 
+of the ticket number, and refer to it in any future correspondence.</p>
+<p>Please allow one to two days to process your request.  If you have questions, 
+you can respond to your confirmation email or call (206) 221-5000. </p>
         </div>
 
     </div>
@@ -145,12 +151,13 @@
     </div>
     <!-- end .container-fluid -->
 
-        <script src="js/vendor/jquery-1.9.0.min.js"></script>
-        <script src="js/vendor/jquery-migrate-1.0.0.min.js"></script>
+        <script src="js/vendor/jquery-1.8.3.min.js"></script>
+        <script src="js/vendor/jquery-migrate-1.0.0b1.js"></script>
         <!--<script src="js/vendor/jquery.pulse.min.js"></script>-->
         <script src="js/vendor/bootstrap.min.js"></script>
         <script src="js/helpers.js"></script>
         <script src="js/webforms.js"></script>
+        <script src="js/nebula.js"></script>
 
     </body>
 </html>
