--- a/qunit/qunit.html
+++ b/qunit/qunit.html
@@ -9,11 +9,11 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="qunit-1.10.0.js"></script>
-  <script>
-    test( "a basic test example", function() {
-      var value = "hello";
-      equal( value, "hello", "We expect value to be hello" );
-    });
-  </script>
+  <script src="../js/vendor/jquery-1.9.0.min.js"></script>
+
+  <script src="../js/helpers.js"></script>
+  <script src="../js/webforms.js"></script>
+  <script src="webforms-qunit.js"></script>
+
 </body>
 </html>
