bus factor! plus adding analytics

--- a/qunit/qunit.html
+++ b/qunit/qunit.html
@@ -10,7 +10,7 @@
   <div id="qunit-fixture"></div>
   <script src="qunit-1.10.0.js"></script>
   <script src="../js/vendor/jquery-1.9.0.min.js"></script>
-
+  <script src="../js/vendor/bootstrap.min.js"></script>
   <script src="../js/helpers.js"></script>
   <script src="../js/webforms.js"></script>
   <script src="webforms-qunit.js"></script>
