--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <hr> -->
 
       <div class="jumbotron">
-        <h1>UW-IT Webforms Service Spectacular</h1>
+        <h1>UW-IT Web Forms Service</h1>
         <p class="lead">A service to meet your webform needs.</p>
         <a class="btn btn-large btn-success" href="#"><i class="icon-envelope"> </i> Request one today</a>
       </div>
@@ -82,7 +82,7 @@
           </p>
 
           <h4><i class="icon-github"> </i> Open Source</h4>
-          <p>A <a href="https://github.com/jodytate/uwit-webforms">GitHub project</a> that leverages a wide range of open-source projects.</p>
+          <p>A <a href="https://github.com/jodytate/uwit-webforms">GitHub project</a> that leverages a wide range of other open-source projects.</p>
 
 
 
