more work on nebula form; possible use of require js
but require won't be finished today

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <![endif]-->
         <link rel="stylesheet" href="css/webforms.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+
     </head>
 
   </head>
@@ -34,6 +35,10 @@
       </header>
 
       <hr> -->
+
+      <div class="alert alert-info" id="github-notice">
+          <strong><h4><i class="icon-github-alt"></i> You're on GitHub!</strong></h4> The web form service runs with limited functionality in this environment. 
+      </div>
 
       <div class="jumbotron">
         <h1>UW-IT Web Forms Service</h1>
@@ -101,7 +106,7 @@
     </div> <!-- /container -->
 
 
-        <script src="js/vendor/jquery-1.8.3.min.js"></script>
+        <script src="js/vendor/jquery-1.9.0.min.js"></script>
         <script src="js/vendor/bootstrap.min.js"></script>
         <script src="js/helpers.js"></script>
         <script type="text/javascript">
