--- a/index.html
+++ b/index.html
@@ -105,12 +105,13 @@
 
     </div> <!-- /container -->
 
-
         <script src="js/vendor/jquery-1.9.0.min.js"></script>
         <script src="js/vendor/bootstrap.min.js"></script>
         <script src="js/helpers.js"></script>
+        <script>
+        gitHubNotice();
+        </script>
         <script type="text/javascript">
-        
           var _gaq = _gaq || [];
           _gaq.push(['_setAccount', 'UA-7648320-3']);
           _gaq.push(['_trackPageview']);
