backed out require js for now

--- a/nebula.html
+++ b/nebula.html
@@ -15,7 +15,6 @@
             <link rel="stylesheet" href="css/font-awesome-ie7.min.css">
         <![endif]-->
         <link rel="stylesheet" href="css/webforms.css">
-        <script data-main="js/webforms" src="js/vendor/require.js"></script>
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
@@ -292,12 +291,12 @@
     </div>
     <!-- end .container-fluid -->
 
-        <!--<script src="js/vendor/jquery-1.9.0.min.js"></script>
+        <script src="js/vendor/jquery-1.9.0.min.js"></script>
         <script src="js/vendor/jquery-migrate-1.0.0.min.js"></script>
-        <!--<script src="js/vendor/bootstrap.min.js"></script>
+        <script src="js/vendor/bootstrap.min.js"></script>
         <script src="js/helpers.js"></script>
         <script src="js/webforms.js"></script>
-        <script src="js/nebula.js"></script>-->
+        <script src="js/nebula.js"></script>
 
     </body>
 </html>
