better setup of index

--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
 
   <body id="index-page">
 
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container-fluid">
+          <a class="brand" href="index.html">UW-IT Webforms</a>
+
+        </div>
+      </div>
+    </nav>
+
     <div class="container-narrow" >
 
       <!-- <header class="masthead">
@@ -42,15 +51,11 @@
 
       <div class="jumbotron">
         <h1>UW-IT Web Forms Service</h1>
-        <p class="lead">A service to meet your webform needs.</p>
-        <a class="btn btn-large btn-success" href="#"><i class="icon-envelope"> </i> Request one today</a>
+        <p class="lead">Need a web-based form? Let us build one for you.</p>
+        <button type="button" class="btn btn-large" href="#"> <i class="icon-envelope"> </i> Request one today</button>
       </div>
 
-
-
-      <hr>
-
-      <div class="row-fluid marketing">
+      <div class="row-fluid marketing well">
         <div class="span6">
 
           <h4><i class="icon-bullhorn"> </i> Branding</h4>
