--- a/nebula.html
+++ b/nebula.html
@@ -268,7 +268,7 @@
     <div class="span4">
   
         <div class="well">
-            <h3>Description</h3>
+            <h3>Help</h3>
             <p>This form can be used to submit requests for changes to Nebula account:</p>
             <ul>
                 <li>Account creation</li>
