--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
           </p>
 
-          <h4><i class="icon-github"> </i> Open Source</h4>
+          <h4><i class="icon-github-alt"> </i> Open Source</h4>
           <p>A <a href="https://github.com/jodytate/uwit-webforms">GitHub project</a> that leverages a wide range of other open-source projects.</p>
 
 
