--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           </p>
 
           <h4><i class="icon-github-alt"> </i> Open Source</h4>
-          <p>A <a href="https://github.com/jodytate/uwit-webforms">GitHub project</a> that leverages a wide range of other open-source projects.</p>
+          <p>A <a href="https://github.com/jodytate/uwit-webforms">GitHub project</a> built on a wide range of other open-source projects.</p>
 
 
 
