--- a/form.html
+++ b/form.html
@@ -39,10 +39,10 @@
 
 
           <ul class="nav pull-right">
-                      <li><a href="#">Link</a></li>
+                      <!--<li><a href="#">Link</a></li>
                       <li class="divider-vertical"></li>
  
-                          <li class="divider"></li>
+                          <li class="divider"></li>-->
                           <li><a>UW NetID: <span id="uw-netid">Can't Detect</span></a></li>
                         </ul>
                       </li>
@@ -59,6 +59,9 @@
       </div>
     </nav>        
     <div class="container">
+        <div class="alert alert-info" id="dev-mode-notice">
+            <h4><i class="icon-umbrella"></i> Development Environment</h4> The form service works with limited funtionality in its development environment.
+        </div>
 
     <header>
         <h1></h1>
@@ -73,6 +76,7 @@
         <!--<div class="well">
             <p id="form-description">Or more of a description here.</p>
         </div> -->
+
 
 
         <div class="alert alert-error" id="ticket-creation-error">
