spinner if needed; better checks for dev environment

--- a/form.html
+++ b/form.html
@@ -57,10 +57,19 @@
           </div><!--/.nav-collapse -->
         </div>
       </div>
-    </nav>        
-    <div class="container">
+    </nav>   
+
+
+
+    <div class="container" role="main">
+
+        <!-- <div id="loading-notice">
+            <h3><i class="icon-spinner icon-spin"></i> 
+        Loading form ...</h3>
+        </div> -->     
+
         <div class="alert alert-info" id="dev-mode-notice">
-            <h4><i class="icon-umbrella"></i> Development Environment</h4> The form service works with limited funtionality in its development environment.
+            <h4><i class="icon-umbrella"></i> Development Environment </h4> The form service works with limited funtionality in its development environment.
         </div>
 
     <header>
@@ -141,7 +150,6 @@
                 <button type="button" class="btn-primary btn" id="submit-form">Submit</button>
                 <button type="button" class="btn">Cancel</button>
                 
-                <hr/>
             
 
             <div class="alert alert-info demo">
