--- a/form.html
+++ b/form.html
@@ -69,7 +69,7 @@
         </div> -->     
 
         <div class="alert alert-info" id="dev-mode-notice">
-            <h4><i class="icon-umbrella"></i> Development Environment </h4> The form service works with limited funtionality in its development environment.
+           <i class="icon-umbrella icon-2x pull-left"></i> <h4> Development Environment </h4> The form service works with limited funtionality in its development environment.
         </div>
 
     <header>
