link to underscore

--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
 <li><a href="http://modernizr.com/">Modernizr</a></li>
 <li><a href="http://gruntjs.com/">Grunt</a></li>
 <li><a href="http://sass-lang.com/">Sass</a></li>
+<li><a href="http://underscorejs.org/">Underscore</a></li>
+
 </ul>
 
           </p>
