--- a/form.html
+++ b/form.html
@@ -110,7 +110,7 @@
         <form>
 
 
-    <fieldset>
+    <fieldset id="requestor-fieldset">
 
         <legend>Your Information</legend>
                     <label>Name</label>
@@ -148,9 +148,12 @@
 
             <div class="form-actions">
                 <button type="button" class="btn-primary btn" id="submit-form">Submit</button>
-                <button type="button" class="btn">Cancel</button>
+                <button type="button" class="btn" id="form-cancel">Cancel</button>
                 
-            
+            <div id="form-addendum">
+                <hr/>
+
+            </div>
 
             <div class="alert alert-info demo">
                 <strong>Note</strong> This area may or may not be used.
