adding that the form integrates with more ... stuff

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <p>Principled design that's consistent across all forms and backed by <a href="http://rosenfeldmedia.com/books/webforms/">respected research</a> to reduce time-to-completion and increase input accuracy.</p>
 
           <h4><i class="icon-cogs"> </i> Integration</h4>
-          <p>Works with UW-IT RT or email.</p>
+          <p>Works with UW-IT RT, email and more.</p>
 
         </div>
         <!-- end .span6 -->
