testing form submission dependent on host environment

--- a/form.html
+++ b/form.html
@@ -43,7 +43,7 @@
                       <li class="divider-vertical"></li>
  
                           <li class="divider"></li>-->
-                          <li><a>UW NetID: <span id="uw-netid">Can't Detect</span></a></li>
+                          <li><a><i class="icon-lock"> </i> UW NetID: <span id="uw-netid">Can't Detect</span></a></li>
                         </ul>
                       </li>
                     </ul>
@@ -150,10 +150,11 @@
                 <button type="button" class="btn-primary btn" id="submit-form">Submit</button>
                 <button type="button" class="btn" id="form-cancel">Cancel</button>
                 
-            <div id="form-addendum">
+            <!--<div id="form-addendum">
+
                 <hr/>
 
-            </div>
+            </div> -->
 
             <div class="alert alert-info demo">
                 <strong>Note</strong> This area may or may not be used.
