cleaning up thanks notice

--- a/form.html
+++ b/form.html
@@ -103,7 +103,7 @@
         </div>
 
         <div class="alert alert-success" id="ticket-creation-success">
-            <h4><i class="icon-ok"></i> Thanks</h4>
+            <i class="icon-ok icon-4x pull-left"></i> <h4> Thanks</h4>
             We're processing your request.
         </div>
 
