changing text of submit button on submit

--- a/form.html
+++ b/form.html
@@ -103,8 +103,8 @@
         </div>
 
         <div class="alert alert-success" id="ticket-creation-success">
-            <i class="icon-ok icon-3x pull-left"></i> <h4> Thanks</h4>
-            We're processing your request.
+            <i class="icon-ok icon-3x pull-left"></i> <h3> Thanks!</h3>
+            We're processing your request and will be in touch soon.
         </div>
 
         <form>
