adjusting size, placement of thank you

--- a/form.html
+++ b/form.html
@@ -63,10 +63,10 @@
 
     <div class="container" role="main">
 
-        <!-- <div id="loading-notice">
+        <div id="loading-notice">
             <h3><i class="icon-spinner icon-spin"></i> 
         Loading form ...</h3>
-        </div> -->     
+        </div>
 
         <div class="alert alert-info" id="dev-mode-notice">
            <i class="icon-umbrella icon-2x pull-left"></i> <h4> Development Environment </h4> The form service works with limited funtionality in its development environment.
@@ -74,9 +74,10 @@
 
     <header>
         <h1></h1>
-        <p class="lead" id="form-description"> <a class="help-text-toggle"><i class="icon-info-sign"></i></a></p>
+        <p class="lead" id="form-description"> </p>
     </header>
 
+    <!-- <a class="help-text-toggle"><i class="icon-info-sign"></i></a> -->
 
     <div class="row">
         
@@ -103,8 +104,7 @@
         </div>
 
         <div class="alert alert-success" id="ticket-creation-success">
-            <i class="icon-ok icon-3x pull-left"></i> <h3> Thanks!</h3>
-            We're processing your request and will be in touch soon.
+            <i class="icon-ok icon-2x pull-left"></i> <h3> Thanks!</h3> We're processing your request and will be in touch soon.
         </div>
 
         <form>
