formatting for notices fixed, for now

--- a/form.html
+++ b/form.html
@@ -90,7 +90,7 @@
 
 
         <div class="alert alert-error" id="ticket-creation-error">
-            <strong>Ticket Creation Problem</strong> Descriptive error message.
+            <i class="icon-minus-sign icon-2x pull-left"></i> <h4>Problem</h4> Descriptive error message.
         </div>
 
         <div class="alert alert-info demo">
