more work on demo form

--- a/form.html
+++ b/form.html
@@ -72,6 +72,10 @@
            <i class="icon-umbrella icon-2x pull-left"></i> <h4> Development Environment </h4> The form service works with limited funtionality in its development environment.
         </div>
 
+        <div class="alert alert-error" id="major-problem-notice">
+            <i class="icon-minus-sign icon-2x pull-left"></i> <h4>Problem</h4>
+        </div>
+
     <header>
         <h1></h1>
         <p class="lead" id="form-description"> </p>
@@ -155,17 +159,6 @@
                 <hr/>
 
             </div> -->
-
-            <div class="alert alert-info demo">
-                <strong>Note</strong> This area may or may not be used.
-            </div>
-            <!-- <address>
-                <strong><span class="name"></span></strong><br/>
-                <span class="title"></span><br/>
-                <span class="mailstop"></span><br/>
-                <span class="phone"></span><br/>
-                <span class="email"></span>
-            </address> -->
             
 
             </div>
