--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
           <p>Using <a href="http://www.abookapart.com/products/responsive-web-design">responsive design</a>, forms work across a variety of devices, browsers and operating systems.</p>
 
           <h4><i class="icon-star"> </i> Design</h4>
-          <p>Principled design that's consistent across all forms and backed by <a href="http://rosenfeldmedia.com/books/webforms/">respected research</a> to reduce time-to-completion and increase input accuracy.</p>
+          <p>Principled design that's consistent across all forms and backed by <a href="http://rosenfeldmedia.com/books/webforms/">respected research</a> to reduce time-to-completion and increase input accuracy. See an <a href="form.html?form=demo">Example Form.</a>
+</p>
 
           <h4><i class="icon-cogs"> </i> Integration</h4>
           <p>Works with UW-IT RT, email and more.</p>
@@ -97,13 +98,13 @@
           <h4><i class="icon-github-alt"> </i> Open Source</h4>
           <p>A <a href="https://github.com/jodytate/uwit-webforms">GitHub project</a> built on a wide range of other open-source projects.</p>
 
-
-
-
         </div>
         <!-- end .span6 -->
 
       </div>
+      <!-- end .well -->
+
+
 
       <hr>
 
